--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "."
 title: "Intro QSS"
 description: |
   Introduction to quantitative social science (POLSC 30500);
-output_dir: "_site"
+output_dir: "docs"
 navbar:
   right:
     - text: "Home"
